--- a/exercice1/index.html
+++ b/exercice1/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
         <title>Additionneur</title>
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link href="../assets/css/vendor/materialize.css" rel="stylesheet">
+        <link href="../assets/css/style.css" rel="stylesheet">
     </head>
     <body class="grey lighten-3">
         <h1 class="center-align">Additionneur</h1>
@@ -43,6 +44,6 @@
 
         <script src="../assets/js/vendor/materialize.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-        <script src="../assets/js/index.js"></script>
+        <script src="index.js"></script>
     </body>
 </html>
