--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
         <title>Vue</title>
-        <link href="assets/css/vendor/materialize.css" rel="stylesheet"> 
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link href="assets/css/vendor/materialize.css" rel="stylesheet">
+        <link href="assets/css/style.css" rel="stylesheet">
     </head>
     <body class="grey lighten-3">
         <h1 class="center-align green-text">Vue.js</h1>
@@ -21,13 +22,19 @@
                 <article class="z-depth-1 white">
                     <h2 class="center-align">Magic Number</h2>
                     <p class="section center-align">
-                        <a class="btn" href="exercice1/index.html" title="Exercice 1">Exercice 2</a>
+                        <a class="btn" href="exercice2/index.html" title="Exercice 2">Exercice 2</a>
                     </p>
                 </article>
+
+               <article class="z-depth-1 white">
+                   <h2 class="center-align">Calculatrice</h2>
+                   <p class="section center-align">
+                       <a class="btn" href="exercice3/index.html" title="Exercice 3">Exercice 3</a>
+                   </p>
+               </article>
            </section>
         </main>
     <script src="assets/js/vendor/materialize.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-    <script src="assets/js/index.js"></script>
     </body>
 </html>
