--- a/exercice2/index.html
+++ b/exercice2/index.html
@@ -6,11 +6,12 @@
     <title>Magic Number</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="../assets/css/vendor/materialize.css" rel="stylesheet">
+    <link href="../assets/css/style.css" rel="stylesheet">
 </head>
 <body class="grey lighten-3">
 <h1 class="center-align">Magic Number</h1>
 <main class="container" role="main">
-    <section id="app2"  class="row z-depth-1 white section">
+    <section id="app"  class="row z-depth-1 white section">
         <article class="center-align green-text flow-text">
             Trouvez le nombre entre 0 et 100
         </article>
@@ -38,6 +39,6 @@
 
 <script src="../assets/js/vendor/materialize.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-<script src="../assets/js/index.js"></script>
+<script src="index.js"></script>
 </body>
 </html>
