--- a/exercice3/index.html
+++ b/exercice3/index.html
@@ -11,7 +11,7 @@
 <body class="grey lighten-3">
 <h1 class="center-align">Calculatrice</h1>
 <main class="container" role="main">
-    <section id="app2"  class="row z-depth-1 white section">
+    <section  class="row z-depth-1 white section">
         <article class="center-align green-text flow-text">
             Entrez une opération
         </article>
