--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@
                        <a class="btn" href="exercice3/index.html" title="Exercice 3">Exercice 3</a>
                    </p>
                </article>
+
+               <article class="z-depth-1 white">
+                   <h2 class="center-align">Interface</h2>
+                   <p class="section center-align">
+                       <a class="btn" href="exercice4/index.html" title="Exercice 4">Exercice 4</a>
+                   </p>
+               </article>
            </section>
         </main>
     <script src="assets/js/vendor/materialize.js"></script>
